add slides to day 1 pm

--- a/course/2_basicplotting.qmd
+++ b/course/2_basicplotting.qmd
@@ -442,4 +442,5 @@ This matrix is filled with the counts of cells with and without the specific TCR
 
 ```
 
+The slides for this lecture are available [here](https://github.com/crigrants/CRI_bioinformatics_workshop/blob/main/course/R%20workshop%20Day%201%20PM.pdf).
 
