Lecture slides heading

--- a/course/1_introR.qmd
+++ b/course/1_introR.qmd
@@ -740,7 +740,9 @@ codons <- str_sub(sequence, seq(1, str_length(sequence), by = 3), seq(3, str_len
 print(codons)
 ```
 
-The slides for this lecture are available [here](https://github.com/crigrants/CRI_bioinformatics_workshop/blob/main/course/R%20workshop%20Day%201%20AM.pdf).
+# Lecture Slides
+
+The slides for this lecture are available [here](https://github.com/crigrants/CRI_bioinformatics_workshop/blob/main/course/R%20workshop%20Day%201%20AM.pdf) 
 
 
 
