--- a/course/2_basicplotting.qmd
+++ b/course/2_basicplotting.qmd
@@ -446,5 +446,7 @@ This matrix is filled with the counts of cells with and without the specific TCR
 
 ```
 
+# Lecture Slides
+
 The slides for this lecture are available [here](https://github.com/crigrants/CRI_bioinformatics_workshop/blob/main/course/R%20workshop%20Day%201%20PM.pdf).
 
