--- a/course/3_clustering.qmd
+++ b/course/3_clustering.qmd
@@ -398,4 +398,6 @@ ggscatter(df, x = "Gene1", y = "Gene2",
 
 ```
 
+# Lecture Slides
+
 The slides for this lecture are available [here](https://github.com/crigrants/CRI_bioinformatics_workshop/blob/main/course/R%20workshop%20Day%202%20AM.pdf).
