--- a/course.qmd
+++ b/course.qmd
@@ -19,6 +19,7 @@ title: "Course overview"
 2. [Introduction to IGV](https://rnabio.org/module-02-alignment/0002/05/02/AlignVis_IGV/) (Lead: Malachi)
 
 3. [Differential Expression Analysis (DESeq2)](https://rnabio.org/module-03-expression/0003/03/03/Differential_Expression-DESeq2/) (Lead: Zach)
+[Code blocks for DE](course/test_newfile.qmd)
 
 4. [Differential Expression Visualization (DESeq2)](https://rnabio.org/module-03-expression/0003/04/02/DE_Visualization-DESeq2/) (Lead: Zach)
 
