update spatial scripts

--- a/course/python_tutorial.ipynb
+++ b/course/python_tutorial.ipynb
@@ -5,7 +5,7 @@
    "id": "2aec1274-9a43-4278-bd72-753097eedc3f",
    "metadata": {},
    "source": [
-    "# CRI Bootcamp - Day 6: Python Intro"
+    "# Intro to Python"
    ]
   },
   {
