--- a/course/spatial_demo.ipynb
+++ b/course/spatial_demo.ipynb
@@ -5,7 +5,7 @@
    "id": "0282e9e0-62ba-4756-8559-fd3a009137cd",
    "metadata": {},
    "source": [
-    "# CRI Bootcamp - Day 6: Spatial Analysis"
+    "# Intro to Spatial Analysis"
    ]
   },
   {
